[tool.poetry]
name = "api-rest-live-python"
version = "0.1.0"
description = ""
authors = ["william koller <wkoller25@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0.2"
flask-pydantic-spec = "^0.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
